	  ColumnFilter
	- BACKWARDS-INCOMPATIBLE: rename "blacklist" to "excludes" in
	  hxl.model.Dataset.without_columns() and JSON format for loading a
	  ColumnFilter
	- added a new ExpandListsFilter and hxlexpand command-line script
	- added --skip-untagged option to hxlcut script
	- improved docstrings for hxl.io, hxl.datatypes, hxl.converters, and hxl.geo modules

2020-05-20 Release 4.20
	- switch to jsonpath-ng library to support more JSONPath features
	- add support for row formulas as right side of row queries (making it possible to compare one column to another)
	- add today() function for row formulas (today's UTC date in ISO YYYY-mm-dd format)
	- add support for parsing Unix-style epoch timestamps (nanoseconds, milliseconds, or seconds)
	- add long description in setup.py for PyPi (from README.md)
	- work around xlrd date-handling bug (for malformed Excel dates)
	- more cleanup on docstrings

2020-04-23 Release 4.19
	- allow selector for JSON data to be a JSON path as well as just a simple token
	- add --selector option to all command-line scripts
	- added toupper() and tolower() row functions
	- fixed bugs with date heuristics and with JSONpath parsing of non-strings
	- various code cleanup
	- add a generic Makefile to simplify common testing and git tasks

2020-03-16 Release 4.18
	- add ImplodeFilter and implode() method to convert a long dataset into a wide dataset
	- add hxlexplode and hxlimplode command-line scripts
	- change hxl.model.Column.parse to return None for an empty string, or False for a malformed one
	- add logging for malformed tagspecs
	- extend column-rename spec to allow filtering by header as well as tag pattern

2020-02-25 Release 4.17
	- add ability to flatten lists as non-JSON (just separated by " | ")

2019-12-09 Release 4.16
	- added optional encoding parameter to hxl.io.data() etc. to force a character encoding
	- fix bug opening an Excel file when the server sends a
	  content-type: zip MIME type